--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/logo.webp" type="image/x-icon">
+    <meta name="description" content="This website made by Saurav Sharma Only Using Html, Css">
     <title>Psd2</title>
 </head>
 
@@ -20,7 +21,7 @@
                     <nav>
                         <ul class="flex justi-right">
                             <li><a href="/index.html" class="active">HOME</a></li>
-                            <li><a href="ourstory.html" id="liour">OUR STORY</a></li>
+                            <li><a href="/ourstory.html" id="liour">OUR STORY</a></li>
                             <li class="last"><a href="#buynow">BUY NOW</a></li>
 
                         </ul>
@@ -34,7 +35,7 @@
     <div class="wrap-2">
         <div class="con fontmaj">
             <p>PLAN YOUR SALE <br> With Us</p>
-            <a href="">Shop Now</a>
+            <a href="#">Shop Now</a>
         </div>
 
     </div>
@@ -98,7 +99,7 @@
         <div class="con">
             <div class="row alcenter flex justi-center" ><img src="img/logo.webp" alt="LOGO"></div>
             <div class="row text-center soc flex justi-center ">
-                <img src="img/facebook (1).png" alt="facebook"  width="25" height="25" loading="lazy">
+                <img src="img/facebook.png" alt="facebook"  width="25" height="25" loading="lazy">
                 <img src="img/pinterest.png" alt="pintrest" width="25" height="25" loading="lazy">
                 <img src="img/linkedin.png" alt="Linkdin" width="25" height="25" loading="lazy">
                 <img src="img/twitter.png" alt="twitter" width="25" height="25" loading="lazy">
@@ -108,9 +109,9 @@
             <ul class="flex justi-center textmon col-m-12">
                 <li><a href="/index.html"> Home</a></li>
                 <li><a href="/ourstory.html">Our Story</a> </li>
-                <li><a href="">Buy Now</a> </li>
-                <li><a href="">Privacy Policy</a> </li>
-                <li><a href="">Terms and conditions</a> </li>
+                <li><a href="#">Buy Now</a> </li>
+                <li><a href="#">Privacy Policy</a> </li>
+                <li><a href="#">Terms and conditions</a> </li>
             </ul>
         </div>
     </div>
