--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/logo.webp" type="image/x-icon">
     <meta name="description" content="This website made by Saurav Sharma Only Using Html, Css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" >
     <title>Psd2</title>
 </head>
 
@@ -44,7 +45,7 @@
             <h2>GREAT SALES PEOPLE SELL VERBS, NOT NOUNS</h2>
         </div>
     </section>
-    <section class="wrap-4" id="ourstroy">
+    <section class="wrap-4" id="ourstory">
         <div class="con">
             <div class="row">
                 <div class="col-4"></div>
@@ -58,7 +59,7 @@
                         porro numquam nam molestiae libero? Doloribus molestias blanditiis delectus placeat repellat
                         natus odio odit quae beatae vitae harum, perspiciatis labore perferendis necessitatibus, fugiat
                         omnis, ut maiores? Tempore placeat </p>
-                    <a href="/ourstory.html">READ MORE</a>
+                    <a href="/ourstory.html">READ Our Story</a>
                 </div>
             </div>
         </div>
@@ -99,12 +100,18 @@
         <div class="con">
             <div class="row alcenter flex justi-center" ><img src="img/logo.webp" alt="LOGO"></div>
             <div class="row text-center soc flex justi-center ">
-                <img src="img/facebook.png" alt="facebook"  width="25" height="25" loading="lazy">
+                <!-- <img src="img/facebook.png" alt="facebook"  width="25" height="25" loading="lazy">
                 <img src="img/pinterest.png" alt="pintrest" width="25" height="25" loading="lazy">
                 <img src="img/linkedin.png" alt="Linkdin" width="25" height="25" loading="lazy">
                 <img src="img/twitter.png" alt="twitter" width="25" height="25" loading="lazy">
                 <img src="img/rss.png" alt="rssfeed" width="25" height="25" loading="lazy">
-                <img src="img/instagram.png" alt="instagram" width="25" height="25" loading="lazy">
+                <img src="img/instagram.png" alt="instagram" width="25" height="25" loading="lazy"> -->
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-whatsapp"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-solid fa-square-rss"></i>
+                <i class="fa-brands fa-instagram"></i>
             </div>
             <ul class="flex justi-center textmon col-m-12">
                 <li><a href="/index.html"> Home</a></li>
